--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,22 @@ textarea {
   }
 }
 
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 3px 0;
+/*    border-top: 1px solid $grayLight;
+    &:last-child {
+      border-bottom: 1px solid $grayLight; 
+    } */
+  }
+}
+
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -155,8 +171,6 @@ input {
 }
 
 .field_with_errors {
-  @extend .control-group;
-  @extend .error;
 }
 
 /* other */
