--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,12 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "Inloggen", "#" %></li>
+      <% if signed_in? %> 
+      <li><%= link_to "Control Panel", "#" %></li>
+      <% else %>
+      <li><%= link_to "inloggen", signin_path %></li> 
       <li><%= link_to "Registreren", signup_path %></li>
+      <% end %>
     </ul>
   </nav>
 </footer>
