--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,15 @@
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/quote_form' %>
+      </section>
+    </aside>
+  </div>
+<% else %>
 <div class="center hero-unit">
   <h1>Hamers zonder Sikkel</h1>
 
@@ -5,5 +17,6 @@
     NYANTAA
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+  <%= link_to "Sign up now!", signup_url, class: "btn btn-large btn-primary" %>
 </div>
+<% end %>
