--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,16 @@
                 </li>
               </ul>
             </li>
+            <% if current_user.admin? %>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Triumviraat <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Groups", groups_path %></li>
+              </ul>
+            </li>
+            <% end %>
           <% end %>
         </ul>
       </nav>
