--- a/public/kutfeut/kutfeut.css
+++ b/public/kutfeut/kutfeut.css
@@ -29,9 +29,22 @@ from{left: 0%;}
 to{left:80%;}
 }
 
+@-webkit-keyframes sideways
+{
+from{left: 0%;}
+to{left:80%;}
+}
+
 @keyframes bounce
 {
-0%{bottom: 0%;-webkit-transform: rotateX(30deg);transform: rotateX(30deg);}
-5%{bottom:0%;-webkit-transform: rotateX(0deg);transform: rotateX(0deg);}
-100% {bottom:70%;-webkit-transform: rotateX(0deg);transform: rotateX(0deg);}
+0%{bottom: 0%;transform: rotateX(30deg);}
+5%{bottom:0%;transform: rotateX(0deg);}
+100% {bottom:70%;transform: rotateX(0deg);}
+}
+
+@-webkit-keyframes bounce
+{
+0%{bottom: 0%;-webkit-transform: rotateX(30deg);}
+5%{bottom:0%;-webkit-transform: rotateX(0deg);}
+100% {bottom:70%;-webkit-transform: rotateX(0deg);}
 }
