fixes + schrijf_feut

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,8 +5,11 @@
     <tr>
       <th>Activiteit</th>
       <th>Datum</th>
-      <% if current_user.in_group?(Usergroup.find_by(name: 'Triumviraat')) %>
+      <% if current_user.admin? %>
       <th></th>
+      <th></th>
+      <% end %>
+      <% if current_user.schrijf_feut? %>
       <th></th>
       <% end %>
     </tr>
@@ -17,10 +20,13 @@
       <tr>
         <td><%= link_to event.title, event %></td>
 	<td><%= event.date.strftime("%d/%m/%Y") %>
-        <% if current_user.in_group?(Usergroup.find_by(name: 'Triumviraat')) %>
+        <% if current_user.admin? %>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
         <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
+        <% if current_user.schrijf_feut? %>
+	<td><%= link_to 'Edit', edit_event_path(event) %></td>
+	<% end %>
       </tr>
     <% end %>
   </tbody>
