--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
       <% if signed_in? %> 
       <% else %>
       <li><%= link_to "inloggen", signin_path %></li> 
-      <li><%= link_to "Registreren", signup_path %></li>
+      <li><%= link_to "Registreren", register_path %></li>
       <% end %>
     </ul>
   </nav>
