--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Soort</th>
+      <th>Cijfer</th>
       <th></th>
       <% if current_user.admin? %>
       <th></th>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= link_to beer.name, beer %></td>
         <td><%= beer.soort %></td>
+        <td><%= beer.cijfer? %></td>
         <td></td>
         <% if current_user.admin? %>
         <td><%= link_to 'Destroy', beer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
