--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -23,6 +23,18 @@
     <%= f.label :soort %><br>
     <%= f.text_field :soort %>
   </div>
+  <div class="field">
+    <%= f.label :percentage %>
+    <%= f.text_field :percentage %>
+  </div>
+  <div class="field">
+    <%= f.label :brewer %>
+    <%= f.text_field :brewer %>
+  </div>
+  <div class="field">
+    <%= f.label :country %>
+    <%= f.text_field :country %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
