--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -32,7 +32,7 @@
   </div>
 </div>
 
-<%= link_to 'Review', reviews_beer_path(@beer) %> |
+<%= link_to 'Review | ', reviews_beer_path(@beer) unless current_user.reviews.find_by(beer_id: @beer.id) %> 
 <% if current_user.admin? %>
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <% end %>
