--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/random_biertje' %>
+      </section>
+      <section>
         <%= render 'shared/quote_form' %>
       </section>
       <section>
