--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <div><%= f.hidden_field :user_id %></div>
+  
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
@@ -21,6 +23,11 @@
     <%= f.date_select :date %>
   </div>
   
+  <div class="field">
+    <%= f.label :deadline, "Inschrijf deadline" %><br>
+    <%= f.datetime_select :deadline %>
+  </div>
+
   <div class="field">
     <%= f.text_area :beschrijving, placeholder: "Wat gaan we doen?" %>
   </div>
