--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,7 @@
       <%= gravatar_for user, size: 52 %>
       <%= link_to user.name, user %>
       <% if current_user.admin? && !current_user?(user) %>
+      <%= Quote.count(:conditions => ["user_id = ?", user.id]) %>
         | <%= link_to "edit", edit_user_path(user) %>
         | <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
