--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
     <li>
       <%= gravatar_for user, size: 52 %>
       <%= link_to user.name, user %>
-      <%= Quote.count(:conditions => ["user_id = ?", user.id]) %>
+      <%= user.quotes.count %>
       <% if current_user.admin? && !current_user?(user) %>
         | <%= link_to "edit", edit_user_path(user) %>
         | <%= link_to "delete", user, method: :delete,
