Vertalingen + grotere Gravatar

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
+<%= link_to 'Laat zien', @event %> |
+<%= link_to 'Terug', events_path %>
