--- a/app/views/polls/edit.html.erb
+++ b/app/views/polls/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @poll %> |
-<%= link_to 'Back', polls_path %>
+<%= link_to 'Laat zien', @poll %> |
+<%= link_to 'Terug', polls_path %>
