--- a/app/views/polls/index.html.erb
+++ b/app/views/polls/index.html.erb
@@ -28,5 +28,5 @@
 <%= will_paginate %>
 
 <% if current_user.admin? %>
-<%= link_to 'New Poll', new_poll_path %>
+<%= link_to 'Nieuwe Stemming', new_poll_path %>
 <% end %>
