--- a/app/views/polls/show.html.erb
+++ b/app/views/polls/show.html.erb
@@ -5,5 +5,5 @@
   <%= @poll.beschrijving %>
 </p>
 
-<%= link_to 'Edit', edit_poll_path(@poll) %> |
-<%= link_to 'Back', polls_path %>
+<%= link_to 'Bewerk', edit_poll_path(@poll) %> |
+<%= link_to 'Terug', polls_path %>
