--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="actions">
     <%= f.submit %>
-    <%= link_to 'back', @review.beer %>
+    <%= link_to 'Terug', @review.beer %>
   </div>
   
 <% end %>
