--- a/app/views/beers/reviews.html.erb
+++ b/app/views/beers/reviews.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="actions">
     <%= f.submit %>
-    <%= link_to 'back', @beer %>
+    <%= link_to 'Terug', @beer %>
   </div>
   
 <% end %>
