--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -3,7 +3,7 @@
   <%= current_user.name %>
 </h1>
 <span>
-  <%= link_to "view my profile", current_user %>
+  <%= link_to "Mijn profiel", current_user %>
 </span>
 <span>
   <%= pluralize(current_user.quotes.count, "quote") %>
