--- a/app/views/beers/new.html.erb
+++ b/app/views/beers/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New beer</h1>
+<h1>Nieuw Bier</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', beers_path %>
+<%= link_to 'Terug', beers_path %>
