--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,14 +18,14 @@
         <td><%= link_to event.title, event %></td>
 	<td><%= event.date.strftime("%d/%m/%Y") %>
         <% if current_user == event.user and !current_user.admin? and !current_user.schrijf_feut? %>
-        <td><%= link_to 'Edit', edit_event_path(event) %>
+        <td><%= link_to 'Wijzig', edit_event_path(event) %>
         <% end %>
         <% if current_user.admin? %>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Wijzig', edit_event_path(event) %></td>
+        <td><%= link_to 'Verwijder', event, method: :delete, data: { confirm: 'Weet je het zeker?' } %></td>
         <% end %>
         <% if current_user.schrijf_feut? %>
-	<td><%= link_to 'Edit', edit_event_path(event) %></td>
+	<td><%= link_to 'Wijzig', edit_event_path(event) %></td>
 	<% end %>
       </tr>
     <% end %>
@@ -34,5 +34,5 @@
 
 <br>
 <% if lid? %>
-<%= link_to 'New Event', new_event_path %>
+<%= link_to 'Nieuwe activiteit', new_event_path %>
 <% end %>
