--- a/app/views/beers/edit.html.erb
+++ b/app/views/beers/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing beer</h1>
+<h1>Bier aanpassen</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @beer %> |
-<%= link_to 'Back', beers_path %>
+<%= link_to 'Terug', beers_path %>
