--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New event</h1>
+<h1>Nieuwe activiteit</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', events_path %>
+<%= link_to 'Terug', events_path %>
