--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,7 +26,7 @@
                 <li><%= link_to "Instellingen", edit_user_path(current_user) %></li>
                 <li class="divider"></li>
                 <li>
-                  <%= link_to "Sign out", signout_path, method: "delete" %>
+                  <%= link_to "Uitloggen", signout_path, method: "delete" %>
                 </li>
               </ul>
             </li>
@@ -36,7 +36,7 @@
                 Triumviraat <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to "Groups", groups_path %></li>
+                <li><%= link_to "Groepen", groups_path %></li>
               </ul>
             </li>
             <% end %>
