--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>Update your profile</h1>
+<h1>Wijzig je profiel</h1>
 
 	
 <div class="row">
 <aside class="span4">
     <section>
       <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails" target="_blank">change</a>
+    <a href="http://gravatar.com/emails" target="_blank">Wijzig</a>
     </section>
     <% if current_user.admin? %>
     <section>
@@ -16,19 +16,19 @@
   <div class="span6">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label :name %>
+      <%= f.label :name, "Naam" %>
       <%= f.text_field :name %>
 
-      <%= f.label :email %>
+      <%= f.label :email, "Email" %>
       <%= f.text_field :email %> 
 
-      <%= f.label :password %>
+      <%= f.label :password, "Wachtwoord" %>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirm Password" %>
+      <%= f.label :password_confirmation, "Herhaal wachtwoord" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Save changes", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Opslaan", class: "btn btn-large btn-primary" %>
     <% end %>
   </div> 
 </div>
