--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,6 +22,11 @@
     <%= f.label :date %>
     <%= f.date_select :date %>
   </div>
+
+  <div class="field">
+		<%= f.label :end_time %>
+		<%= f.date_select :end_time %>
+  </div>
   
   <div class="field">
     <%= f.label :deadline, "Inschrijf deadline" %><br>
