--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -20,12 +20,12 @@
 
   <div class="field">
     <%= f.label :date %>
-    <%= f.date_select :date %>
+    <%= f.datetime_select :date %>
   </div>
 
   <div class="field">
 		<%= f.label :end_time %>
-		<%= f.date_select :end_time %>
+		<%= f.datetime_select :end_time %>
   </div>
   
   <div class="field">
