--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@ $(document).ready(function()
 
 <h1>Leden</h1>
 
-<table id="user" class="tablesorter">
+<table id="user" class="tablesorter table table-hover">
   <thead>
     <tr>
       <th>Naam</th>
