Bug fixed: Tabel bier was super lelijk. Nu opgemaakt door bootstrap

--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -8,7 +8,7 @@ $(document).ready(function()
 
 <h1>Biertjes</h1>
 
-<table id="bier" class="tablesorter">
+<table id="bier" class="tablesorter table tablehover">
   <thead>
     <tr>
       <th>Naam</th>
