--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,10 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Leden", users_path %></li>
-                <li><%= link_to "Stemmingen", polls_path %></li>
-                <li><%= link_to "Activiteiten", events_path %></li>
+								<% if current_user.lid? %>
+								<li><%= link_to "Stemmingen", polls_path %></li>
+								<li><%= link_to "Activiteiten", events_path %></li>
+							  <% end %>
                 <li><%= link_to "Bier", beers_path %></li>
               </ul>
             </li>
