Database backup dingetje

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,6 +39,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Groepen", groups_path %></li>
+                <li><%= link_to "Download DB", dbdump_path %></li>
               </ul>
             </li>
             <% end %>
