pagination on events

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,6 +13,8 @@
     </tr>
   </thead>
 
+	<%= will_paginate %>
+
   <tbody>
     <% @events.each do |event| %>
       <tr>
@@ -36,6 +38,8 @@
     <% end %>
   </tbody>
 </table>
+
+<%= will_paginate %>
 
 <br>
 <% if lid? %>
