--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -3,35 +3,19 @@
 <div class="row">
   <aside class="span8">
     <section>
-      <p>Notulen</p>
+			<%= markdown(@meeting.notes).html_safe %>
     </section>
   </aside> 
   <div class="span2"> 
     <section>
-			Opening<br \>
-			Mededelingen<br \>
-			Vaststellen agenda<br \>
-			Secretarieel<br \>
-			&nbsp;&nbsp;Notulen<br \>
-			&nbsp;&nbsp;Actiepunten<br \>
-			&nbsp;&nbsp;&nbsp;&nbsp;Rob: Met de beveiliging bij de Gallery praten over restricties van de campus.<br \>
-			&nbsp;&nbsp;&nbsp;&nbsp;Gijs: Contact opnemen met NEST<br \>
-			&nbsp;&nbsp;&nbsp;&nbsp;Iedereen: Eet elke avond (ook vóór pandora).<br \>
-			&nbsp;&nbsp;&nbsp;&nbsp;Iedereen: Een puzzel maken en klaarmaken voor volgende vergadering.<br \>
-			Binnengekomen stukken<br \>
-			Verhaal<br \>
-			GEBAKborrel<br \>
-			Puzzels bespreken<br \>
-			W.V.T.T.K<br \>
-			Rondvraag<br \>
-			Volgende vergadering<br \>
-			Sluiting<br \>
+			<%= markdown(@meeting.agenda).html_safe %>
     </section>
   </div>
 </div>
-
-<p>Genotuleerd door: <i><%= link_to User.find(8).name, User.find(8) %></i></p>
-<% if current_user.admin? %>
-<%= link_to "edit", '#' %> | 
+<% if @meeting.user_id != nil %>
+<p>Genotuleerd door: <i><%= link_to User.find(@meeting.user_id).name, User.find(@meeting.user_id) %></i></p>
+<% end %>
+<% if current_user.admin? || current_user.schrijf_feut? %>
+	<%= link_to "edit", "/notuleer/#{@meeting.id}" %> | 
 <% end %>
 <%= link_to 'Back', meetings_path %>
