--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
                 <li><%= link_to "Leden", users_path %></li>
 								<% if current_user.lid? %>
 								<li><%= link_to "Activiteiten", events_path %></li>
+								<li><%= link_to "Vergaderingen", meetings_path %></li>
 							  <% end %>
                 <li><%= link_to "Bier", beers_path %></li>
               </ul>
