--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,29 +1,43 @@
-<h1>Listing meetings</h1>
+<script type="text/javascript">
+$(document).ready(function()
+    {
+	$("#meeting").tablesorter();
+    }
+);
+</script>
 
-<table>
+<h1>Vergaderingen</h1>
+
+<table id="meeting" class="tablesorter table table-hover">
   <thead>
     <tr>
-      <th>Agenda</th>
-      <th>Notes</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>datum</th>
+      <th>onderwerp</th>
+      <% if current_user.admin? %>
+      <th>Admin stuff</th>
+      <% end %>
     </tr>
   </thead>
 
-  <tbody>
-    <% @meetings.each do |meeting| %>
-      <tr>
-        <td><%= meeting.agenda %></td>
-        <td><%= meeting.notes %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+<%= will_paginate %>	
+
+ <tbody> 
+  <% @meetings.each do |m| %>
+    <tr>
+			<td><%= m.date.strftime("%d/%m/%Y") %></td>
+      <td><%= link_to m.onderwerp, m %></td>
+      <% if current_user.admin? %><td>
+        <%= link_to "Wijzig", edit_meeting_path(m) %>
+        | <%= link_to "Verwijder", m, method: :delete,
+                                  data: { confirm: "Weet je het zeker?" } %></td>
+      <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Meeting', new_meeting_path %>
+<%= will_paginate %>
+<% if current_user.admin? %>
+<%= link_to "Add vergadering", new_meeting_path %>
+<% end %>
