--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
 
 <footer class="footer">
   <small>
-    by <a href="http://jackozuidema.com/">Jacko Zuidema</a>
+    by <a href="http://zondersikkel.nl">Hamers zonder Sikkel</a>
   </small>
   <nav>
     <ul>
-      <% if signed_in? %> 
-      <% else %>
+      <% unless signed_in? %> 
       <li><%= link_to "inloggen", signin_path %></li> 
       <li><%= link_to "Registreren", register_path %></li>
       <% end %>
