--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,18 @@
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <% if signed_in? %>
+						<li id="fat-meny" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+								Openbaar <b class="caret"></b>
+							</a>
+								<ul class="dropdown-menu">
+									<% PublicPage.all.each do |pp| %>
+										<% if pp.public %>
+											<li><%= link_to pp.title, "/#{pp.title}" %></li>
+										<% end %>
+									<% end %>
+							</ul>
+						</li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Voor Leden <b class="caret"></b>
@@ -39,11 +51,18 @@
               </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Groepen", groups_path %></li>
+								<li><%= link_to "Openbare Paginas", public_pages_path %></li>
                 <li><%= link_to "Download DB", dbdump_path %></li>
               </ul>
             </li>
             <% end %>
-          <% end %>
+					<% else %>
+									<% PublicPage.all.each do |pp| %>
+										<% if pp.public %>
+											<li><%= link_to pp.title, "/#{pp.title}" %></li>
+										<% end %>
+									<% end %>
+					<% end %>
         </ul>
       </nav>
     </div>
