--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -6,7 +6,7 @@ $(document).ready(function()
 );
 </script>
 
-<h1>Vergaderingen</h1>
+<h1>Openbare Paginas</h1>
 
 <table id="pages" class="tablesorter table table-hover">
   <thead>
